Phase 3–4 engagement + PWA + polish

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ VITE_API_BASE_URL=http://localhost:3000
 # Optional (client): Truecaller SDK (only if you have a web integration)
 VITE_TRUECALLER_SDK_URL=
 VITE_TRUECALLER_PARTNER_KEY=
+
+# Optional (client): analytics endpoint (receives POST JSON). If unset, analytics is disabled.
+VITE_ANALYTICS_ENDPOINT=
